terraform-aws/internet_gateway.tf
#INTERNET GATEWAY
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "mp_leo"
  }
}
