terraform-aws/security-group.tf
resource "aws_security_group" "acesso-ssh-mp" {
  name        = "acesso-ssh-mp"
  description = "acesso-ssh-mp"
  vpc_id      = aws_vpc.vpc.id


  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.cdirs_acesso_remoto

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "mp_leo"
  }
}

resource "aws_security_group" "apis" {
  name   = "apis"
  vpc_id = aws_vpc.vpc.id
  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Colocar o IP do bastion host aqui, só esse
  }

  ingress {
    description = "TLS from VPC"
    from_port   = 5000 # Rodar API na porta 8000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    description = "TLS from VPC"
    from_port   = 3306 # Rodar API na porta 8000
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "TLS from VPC"
    from_port   = 0 # Rodar API na porta 8000
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
